--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,1 +1,99 @@
 /* Empty. Add your own CSS if you like */
+
+/* GENERAL */
+.primary-button {
+	color: #ffffff;
+	background-color:#ed5f5e;
+	font-family: Helvetica Neue, Helvetica;
+	font-size: 15px;
+	font-weight: medium;
+	width:80%;
+	text-align:center;
+	height: 44px;
+	margin-left:10%;
+	margin-right:10%;
+}
+
+.product-desc-container {
+	color: #ffffff;
+	font-family: Helvetica Neue;
+	margin-left: 20px;
+
+}
+
+.big-header {
+	position:absolute; 
+	padding-top: 10%;
+	font-size: 40px;
+	font-weight: light;
+	font-align: left;
+}
+
+.small-header {
+	position:absolute; 
+	padding-top: 20%;
+	font-size: 24px;
+	font-weight: light;
+	font-align: left;
+	opacity:0.75;
+}
+
+.product-description{
+	position:absolute; 
+	padding-top: 30%;
+	font-size: 18px;
+	font-weight: thin;
+	font-align: left;
+	width:60%;
+}
+
+/* PRODUTS PAGE */
+/* BOOKINGS PAGE */
+.wide-as-needed {
+  overflow: scroll;
+  white-space: nowrap;
+}
+.scroll { 
+  min-width: 100%;
+}
+.bar.bar-loading {
+  display: block;
+  height: 24px;
+  
+  /* starts right below a normal header */
+  top: 44px;
+  
+  /* make the text centered vertically and horizontally */
+  text-align: center;
+  padding: 0;
+  line-height: 24px;
+
+  /* transition 'sliding down' (check below)*/
+  -webkit-transition: 200ms all;
+}
+
+
+/* 
+ * make the content's top changes animate.
+ * might not always look good, but looks
+ * good when our loader is added & removed
+ */
+.has-header {
+  -webkit-transition: 200ms top;
+}
+.has-header.has-loading {
+  /* 44px (header) + 24px */
+  top: 68px;
+}
+
+/* make loading bar slide up/down */
+.bar-loading.ng-enter,
+.bar-loading.ng-leave.ng-leave-active {
+  height: 0;
+  border-width: 0px;
+}
+.bar-loading.ng-enter.ng-enter-active,
+.bar-loading.ng-leave {
+  height: 24px;
+  border-width: 1px;
+}
