--- a/www/css/style.css
+++ b/www/css/style.css
@@ -231,6 +231,80 @@
 .scroll { 
   min-width: 100%;
 }
+
+
+/* PRODUCT DEATILS */
+.user-text-container {
+	margin-left:5%;
+	margin-right:5%;
+	margin-bottom:20px;
+	margin-top:15px;
+	background-color:#ffffff;
+	color:#D6D6D6;
+}
+
+.user-info-container {
+	position:absolute;
+	margin-top:85%;
+	width:100%;
+	height:10%;
+}
+
+.user-profile-image {
+	float:left;
+	width:25%;
+	height:50px;
+}
+
+.img-circle {
+	height:50px;
+	width:50px;
+    border-radius: 50%;
+    background-size:cover;
+    margin-left:17%;
+ 	border: 1.5px solid #ffffff;
+}
+
+.user-name {
+	float:left;
+	width:75%;
+	height:50px;
+	line-height: 50px;
+	color:#ffffff;
+}
+
+.image-container {
+	background-size: cover;
+   	background-repeat: no-repeat;
+   	background-position: center;
+	height:325px;
+	width:100%;
+}
+
+.product-info-container {
+	height:20%;
+	width:100%;
+	background:rgba(0, 0, 0, 0.2);
+	position:absolute;
+}
+
+.product-text-container {
+	padding-top:10%;
+	margin-left:5%;
+	margin-right:5%;
+	color:#ffffff;
+}
+
+.product-name {
+	font-size:35px;
+	margin-bottom:4%;
+}
+
+.product-hashtags {
+	color:#D6D6D6;
+	font-size:18px;
+}
+
 .bar.bar-loading {
   display: block;
   height: 24px;
