--- a/www/css/style.css
+++ b/www/css/style.css
@@ -16,6 +16,7 @@
 	border:none;
 	box-shadow:none;
     border-radius: 4px;
+    opacity: 0.9;
 }
 
 .product-desc-container {
@@ -245,7 +246,7 @@
 
 .user-info-container {
 	position:absolute;
-	margin-top:85%;
+	margin-top:270px;
 	width:100%;
 	height:10%;
 }
@@ -305,44 +306,8 @@
 	font-size:18px;
 }
 
-.bar.bar-loading {
-  display: block;
-  height: 24px;
-  
-  /* starts right below a normal header */
-  top: 44px;
-  
-  /* make the text centered vertically and horizontally */
-  text-align: center;
-  padding: 0;
-  line-height: 24px;
-
-  /* transition 'sliding down' (check below)*/
-  -webkit-transition: 200ms all;
+#product-details-confirm-btn {
+	position:fixed;
+	bottom:6%;
 }
 
-
-/* 
- * make the content's top changes animate.
- * might not always look good, but looks
- * good when our loader is added & removed
- */
-.has-header {
-  -webkit-transition: 200ms top;
-}
-.has-header.has-loading {
-  /* 44px (header) + 24px */
-  top: 68px;
-}
-
-/* make loading bar slide up/down */
-.bar-loading.ng-enter,
-.bar-loading.ng-leave.ng-leave-active {
-  height: 0;
-  border-width: 0px;
-}
-.bar-loading.ng-enter.ng-enter-active,
-.bar-loading.ng-leave {
-  height: 24px;
-  border-width: 1px;
-}
