--- a/www/css/style.css
+++ b/www/css/style.css
@@ -338,7 +338,7 @@
 	margin-bottom:5%;
 }
 
-.edit-address {
+.user-text-input {
 	width:90%;
 	margin-left:5%;
 	margin-right:5%;
@@ -452,4 +452,69 @@
 	color:#ffffff;
 	margin-top:2.5%;
 	margin-bottom:2.5%;
+}
+
+/* NAME NUMBER MODAL */
+.complete-page-modal{
+	position:absolute;
+	background-color:#ffffff;
+	border-radius:5px;
+	width:80%;
+	height:300px;
+	bottom:20%;
+	margin-left:10%;
+	margin-right:10%;
+}
+
+.complete-modal-title{
+	text-align:center;
+	margin-top:10%;
+	margin-bottom:5%;
+	font-size:20px;
+}
+
+.complete-modal-description{
+	text-align:center;
+	margin-top:5%;
+	margin-bottom:5%;
+	margin-left:10%;
+	margin-right:10%;
+	font-size:14px;
+}
+
+#user-name-input {
+	border-width:10px;
+	border-color:red;
+	border-style:solid;
+}
+
+#no-reminder-btn {
+	margin-top:5%;
+	margin-bottom:5%;
+	background-color:#9d9c9a;
+}
+
+#close-appt-btn {
+	margin-top:5%;
+	margin-bottom:5%;
+	background-color:#9d9c9a;
+}
+
+#reminder-modal {
+	height:230px;
+	bottom:10%;
+}
+
+#appt-schedule-icon {
+	margin-top:-18%;
+	margin-left:42%;
+}
+
+#appt-confirmed-modal {
+	height:230px;
+}
+
+.menu-blur {
+	-webkit-filter: blur(5px);
+	opacity: .3;
 }
