update back button styles for contact and settings pages

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -550,6 +550,23 @@
 }
 
 /* contact us */
+
+.ion-close-round {
+	margin-left:5%;
+	margin-right:10%;
+	color:#ed5f5e;
+/*	font-size:25px;*/
+}
+
+.button-clear {
+	margin-left:2%;
+}
+
+.ion-ios-arrow-back {
+	margin-right:10%;
+	color:#ed5f5e;
+}
+
 #call-btn{
 	position:absolute;
 	bottom:12%;
