--- a/www/css/style.css
+++ b/www/css/style.css
@@ -25,6 +25,7 @@
 	width:88%;
 	text-align:center;
 	height: 35px;
+	line-height:35px;
 	margin-left:6%;
 	margin-right:6%;
 	text-shadow:none;
@@ -32,6 +33,8 @@
 	box-shadow:none;
     border-radius: 4px;
     opacity: 0.9;
+    overflow: auto;
+    text-decoration: none;
 }
 
 .product-desc-container {
@@ -39,11 +42,10 @@
 	font-family: Helvetica Neue;
 	margin-left: 20px;
 	position:absolute; 
-
+	top:12%;
 }
 
 .big-header {
-	padding-top: 16%;
 	font-size: 30px;
 	font-weight: light;
 	font-align: left;
@@ -552,19 +554,22 @@
 /* contact us */
 
 .ion-close-round {
-	margin-left:5%;
-	margin-right:10%;
+	float:left;
+	margin-left:0%;
 	color:#ed5f5e;
-/*	font-size:25px;*/
 }
 
 .button-clear {
-	margin-left:2%;
+	margin-left:16px;
+	width:50%;
+	padding-left:0px;
 }
 
 .ion-ios-arrow-back {
-	margin-right:10%;
+	float:left;
+	margin-left:0%;
 	color:#ed5f5e;
+	font-size:;
 }
 
 #call-btn{
