--- a/www/css/style.css
+++ b/www/css/style.css
@@ -546,6 +546,36 @@
 	background-color:#80cfc5;
 }
 
+#security-code-input {
+	width:88%;
+	height: 35px;
+	line-height:35px;
+	margin-left:6%;
+	margin-right:6%;
+	padding-left:3%;
+	text-shadow:none;
+	box-shadow:none;
+    border-radius: 4px;
+    border-color:#9d9c9a;
+    border-width:1px;
+    border-style:solid;
+    font-size:25px;
+}
+
+#confirm-phone-sent-to {
+	text-align:center;
+	margin-top:2%;
+	margin-bottom:1%;
+}
+
+.resend-code-link {
+	text-align:center;
+	margin-top:1%;
+	margin-bottom:2%;
+	color:#ed5f5e;
+	text-decoration: underline;
+}
+
 .menu-blur {
 	-webkit-filter: blur(5px);
 	opacity: .3;
