add bottom margin for product details page, make product info on the top fixed position so won't scroll

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -326,7 +326,8 @@
 	height:20%;
 	width:100%;
 	background:rgba(0, 0, 0, 0.2);
-	position:absolute;
+	position:fixed;
+	z-index:5;
 }
 
 .product-text-container {
