--- a/www/css/style.css
+++ b/www/css/style.css
@@ -16,9 +16,34 @@
 	background-size:cover;
 }
 
+.primary-button:disabled {
+	background-color:#9d9c9a;
+}
+
 .primary-button {
 	color: #ffffff;
 	background-color:#ed5f5e;
+	font-family: Helvetica Neue, Helvetica;
+	font-size: 15px;
+	font-weight: bold;
+	width:88%;
+	text-align:center;
+	height: 35px;
+	line-height:35px;
+	margin-left:6%;
+	margin-right:6%;
+	text-shadow:none;
+	border:none;
+	box-shadow:none;
+    border-radius: 4px;
+    opacity: 0.9;
+    overflow: auto;
+    text-decoration: none;
+}
+
+.dismiss-button {
+	color: #ffffff;
+	background-color:#9d9c9a;
 	font-family: Helvetica Neue, Helvetica;
 	font-size: 15px;
 	font-weight: bold;
@@ -355,7 +380,6 @@
 /* EDIT ADDRESS MODAL */
 .edit-address-container {
 	position:absolute;
-	height:270px;
 	width:100%;
 	background-color:#ffffff;
 	background: rgba(250, 250, 250, 0.85);
@@ -381,6 +405,7 @@
 	width:90%;
 	margin-left:5%;
 	margin-right:5%;
+	margin-bottom:20%;
 	background-color:blue;
 }
 
@@ -397,10 +422,18 @@
 	border-radius:5px;
 }
 
-.confirm-address-btn {
-	margin-top:5%;
+.validation-msg {
+	color:#ed5f5e;
+	margin-left:5%;
+	bottom:17%;
+	font-size:10px;
+	position:absolute;
 }
 
+#confirm-address-btn {
+	margin-top:2.5%;
+	margin-bottom:2.5%;
+}
 
 /* COMPLETE PAGE */
 
