--- a/www/css/style.css
+++ b/www/css/style.css
@@ -602,6 +602,11 @@
 	margin-bottom:1%;
 }
 
+#confirm-phone-sent-to > a{
+	text-decoration:none; 
+	color:inherit;
+}
+
 .resend-code-link {
 	text-align:center;
 	margin-top:1%;
