--- a/www/css/buttons.css
+++ b/www/css/buttons.css
@@ -9,6 +9,57 @@
 * #80cfc5   seafoam         *
 * #9d9c9a   ash             *
 ****************************/
+/* Default Button Styles */
+button {
+	font-family: "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+	font-size: 21px;
+	font-weight: 800;
+	text-align:center;
+	text-shadow:none;	
+	box-shadow:none;
+    overflow: auto;
+    text-decoration: none;
+}
+button:disabled {
+	opacity: .4;
+}
+.product-button {
+	padding: 10px 20px 20px;
+	background: transparent;
+}
+.product-button button {
+	width: 100%;
+	padding: 10px;
+	opacity: .9;
+	border-radius: 4px;
+	display: block;
+	height: 44px;
+	line-height: 24px;
+	margin: 0;
+}
+/* Button Colors */
+.primary-button,
+.unavailable-button,
+.dismiss-button,
+.info-button {
+	color: #fff;
+	border:none;
+}
+.primary-button {
+	background-color: #ed5f5e;
+}
+.unavailable-button {
+	background-color: #edbe5e;	
+}
+.dismiss-button {
+	background-color: #9d9c9a;
+}
+.info-button {
+	background-color: #80cfc5;
+}
+.myPopup button {
+	background-color: #ed5f5e;
+}
 
 /* Profile Button */
 .nav-settings-btn {
@@ -22,47 +73,4 @@
 	height:44px;
 	width:44px;
 	padding: 10px;
-}
-/* Primary Action Buttons */
-.static-footer {
-	display: block;
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	right: 0;
-}
-.product-button {
-	padding: 10px 20px 20px;
-}
-button {
-	color: #fff;
-	display: block;
-	height: 44px;
-	line-height: 24px;
-	margin: 0;
-	font-family: "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
-	font-size: 21px;
-	font-weight: 800;
-	width: 100%;
-	padding: 10px;
-	text-align:center;
-	text-shadow:none;
-	opacity: .9;
-	border:none;
-	border-radius: 4px;
-	box-shadow:none;
-    overflow: auto;
-    text-decoration: none;
-}
-button:disabled {
-	opacity: .4;
-}
-.myPopup button {
-	background-color:#ed5f5e;
-}
-.primary-button {
-	background-color:#ed5f5e;
-}
-.dismiss-button {
-	background-color:#9d9c9a;
 }
