--- a/www/css/style.css
+++ b/www/css/style.css
@@ -168,6 +168,19 @@
     color:red;
 }
 
+.date-time-selector buton{
+	
+}
+
+.date-time-selector button:disabled {
+	background: repeating-linear-gradient(
+			  -45deg,
+			  #ffffff,
+			  #ffffff 5px,
+			  #D6D6D6 5px,
+			  #D6D6D6 6.5px)
+}
+
 #address-btn-left {
     float:left;
 }
