--- a/www/css/style.css
+++ b/www/css/style.css
@@ -21,7 +21,7 @@
     color: #ffffff;
     margin-left: 20px;
     position:absolute; 
-    top:12%;
+    top:44px;
 }
 
 .static-footer {
@@ -31,28 +31,6 @@
     bottom: 0;
     left: 0;
     right: 0;
-}
-
-.big-header {
-    font-size: 30px;
-    font-weight: light;
-    text-align: left;
-}
-
-.small-header {
-    padding-top:5%;
-    font-size: 20px;
-    font-weight: light;
-    font-align: left;
-    opacity:0.75;
-}
-
-.product-description{
-    padding-top:5%;
-    font-size: 15px;
-    font-weight: thin;
-    font-align: left;
-    width:60%;
 }
 
 .slider {
@@ -74,6 +52,7 @@
 
 .blur-fullscreen {
   -webkit-filter: blur(5px);
+  margin: -5px -10px -10px -5px;
 }
 
 .slider-pager {
@@ -81,6 +60,7 @@
     padding: 20px;
     margin-bottom:15%;
 }
+
 .slider-pager-page.active {
     color: #ffffff;
 }
@@ -328,7 +308,7 @@
 .product-info-container {
     height:20%;
     width:100%;
-    background:rgba(0, 0, 0, 0.2);
+    background:rgba(0, 0, 0, 0.4);
     position:fixed;
     z-index:5;
 }
@@ -338,16 +318,6 @@
     margin-left:5%;
     margin-right:5%;
     color:#ffffff;
-}
-
-.product-name {
-    font-size:30px;
-    margin-bottom:4%;
-}
-
-.product-hashtags {
-    color:#D6D6D6;
-    font-size:18px;
 }
 
 /* EDIT ADDRESS MODAL */
@@ -682,11 +652,11 @@
 
 .settings-right-btn-address {
     float:right;
-    background-image:url('../img/icon_caret_ash_right@3x.png');
-    height:25px;
-    width:25px;
-    background-size:cover; 
-    font-size:25px;
+    background: transparent url('../img/icon_caret_ash_right@3x.png') no-repeat center center;
+    background-size: 32px 32px;
+    height:32px;
+    width:32px;
+    font-size:16px;
     margin-top:8px;
 }
 
