Adding more styles.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -252,7 +252,7 @@
     margin-bottom:20px;
     margin-top:15px;
     background-color:#ffffff;
-    color:#D6D6D6;
+    color:#3d3c3a;
 }
 
 .user-info-container {
