--- a/www/css/buttons.css
+++ b/www/css/buttons.css
@@ -67,9 +67,48 @@ button:disabled {
 	border-width:0px;
 	position:absolute;
 	right:10px;
-	top:10px;
+	top:16px;
 	color: #ffffff;
 	height:44px;
 	width:44px;
 	padding: 10px;
+}
+
+/* Booking Buttons */
+.date-container button {
+    width: 65px;
+}
+
+.date-container button:first-child {
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+}
+
+.date-container button:last-child {
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+}
+
+.date-time-selector button {
+	
+}
+
+.date-time-selector button:disabled {
+	background: repeating-linear-gradient(
+		-45deg,
+		#ffffff,
+		#ffffff 5px,
+		#cdccca 5px,
+		#cdccca 6.5px);
+}
+
+.booking-container div button {
+    border-right: solid #D6D6D6;
+    border-bottom:solid #D6D6D6;
+    border-width:1px;
+    border-color:#D6D6D6;
+    background-color:#ffffff;
+    color:#D6D6D6;
+    height: 44px;
+    box-shadow:none;
 }
