--- a/www/css/style.css
+++ b/www/css/style.css
@@ -21,7 +21,7 @@
     color: #ffffff;
     margin-left: 20px;
     position:absolute; 
-    top:44px;
+    top: 48px;
 }
 
 .static-footer {
@@ -121,20 +121,15 @@
 }
 
 .booking-container {
-    position:absolute;
-    width:100%;
-    height:300px;
-    bottom:0%;
-    background-color:#ffffff;
-    background: rgba(250, 250, 250, 0.85);
+    background: rgba(256, 256, 256, 0.85);
+    position: absolute;
+    bottom: 0px;
+    overflow: hidden;
+    width: 100%;
 }
 
 .date-container {
-    margin-left:6%;
-}
-
-.date-container button {
-    width:65px;
+    margin-left: 20px;
 }
 
 .date-time-selector {
@@ -143,22 +138,9 @@
 
 .date-time-selector .active
 {
-    border-color: red;
+    border-color: #ed5f5e;
     z-index: 1;
-    color:red;
-}
-
-.date-time-selector buton{
-	
-}
-
-.date-time-selector button:disabled {
-	background: repeating-linear-gradient(
-			  -45deg,
-			  #ffffff,
-			  #ffffff 5px,
-			  #D6D6D6 5px,
-			  #D6D6D6 6.5px)
+    color: #ed5f5e;
 }
 
 #address-btn-left {
@@ -170,8 +152,8 @@
 }
 
 .address-selector .active {
-    border-color: red;
-    color:red;
+    border-color: #ed5f5e;
+    color: #ed5f5e;
 }
 
 #day-of-week {
@@ -187,27 +169,9 @@
     font-size:8px;
 }
 
-.booking-container div button {
-    border-right: solid #D6D6D6;
-    border-bottom:solid #D6D6D6;
-    border-width:1px;
-    border-color:#D6D6D6;
-    background-color:#ffffff;
-    color:#D6D6D6;
-    height:40px;
-    box-shadow:none;
-}
-
 .wide-as-needed {
   overflow: scroll;
   white-space: nowrap;
-}
-
-.booking-sub-header {
-    text-align:center;
-    margin-top:3%;
-    margin-bottom:3%;
-    font-weight:bold;
 }
 
 .horizontal-divider {
