--- a/www/css/style.css
+++ b/www/css/style.css
@@ -22,6 +22,7 @@
     margin-left: 20px;
     position:absolute; 
     top: 48px;
+    z-index: 10;
 }
 
 .static-footer {
@@ -31,6 +32,30 @@
     bottom: 0;
     left: 0;
     right: 0;
+}
+
+#bottom-shader {
+    position: absolute;
+    bottom: 0px;
+    height: 50%;
+    width: 100%;
+    z-index: 1;
+    background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.5) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.5) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.5) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#80000000',GradientType=0 ); /* IE6-9 */
+}
+
+#top-shader {
+    position: absolute;
+    top: 0px;
+    height: 50%;
+    width: 100%;
+    z-index: 1;
+    background: -moz-linear-gradient(top, rgba(0,0,0,0.4) 0%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, rgba(0,0,0,0.4) 0%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, rgba(0,0,0,0.4) 0%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#A0000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
 }
 
 .slider {
@@ -46,8 +71,7 @@
     background-repeat: no-repeat;
     background-position: center;
     height:100%;
-
-  background-size:cover;
+    background-size: cover;
 }
 
 .blur-fullscreen {
@@ -62,21 +86,14 @@
 }
 
 .slider-pager-page.active {
-    color: #ffffff;
+    color: #fff;
 }
 
 /* PRODUCTS PAGE */
 .price-container {
-    width:30%;
+    width:25%;
     display:inline-block;
     vertical-align:middle;
-}
-
-.deadline-msg {
-    width:40%;
-    font-size:12px;
-    display:inline-block;
-  vertical-align:middle;
 }
 
 .arrow-btn {
@@ -88,30 +105,6 @@
     border:none;
     color:#ffffff;
     margin-left:5%;
-}
-
-.price-deadline-container {
-    position:absolute;
-    margin-left:20px;
-    color:#ffffff;
-    font-size:40px;
-    margin-top:120%;
-    height:50px;
-    font-weight:ultralight;
-    font-family: Helvetica Neue, Helvetica;
-    vertical-align:middle;
-}
-
-.dollar-sign {
-    float:left;
-    width:20px;
-    font-size:20px;
-    vertical-align:top;
-}
-
-.product-price {
-    float:left;
-    width:70px;
 }
 
 /* BOOKINGS PAGE */
@@ -126,6 +119,17 @@
     bottom: 0px;
     overflow: hidden;
     width: 100%;
+}
+
+.price-deadline-container {
+    position:absolute;
+    margin-left:20px;
+    color: #fff;
+    bottom: 120px;
+    overflow: hidden;
+    width: 100%;
+    vertical-align:middle;
+    z-index: 2;
 }
 
 .date-container {
@@ -179,13 +183,8 @@
     width:85%;
 }
 
-#booking-confirm-btn {
-    margin-top:5%;
-}
-
 .address-selector {
-    margin-left:6%;
-    margin-right:6%;
+    padding: 0px 20px 20px;
 }
 
 .address-btn{
