--- a/www/css/buttons.css
+++ b/www/css/buttons.css
@@ -23,11 +23,14 @@ button {
 button:disabled {
 	opacity: .6;
 }
-.product-button {
+.action-button {
 	padding: 10px 20px 20px;
 	z-index: 10;
 }
-.product-button button {
+.action-button.no-padding {
+	padding: 10px 0px 20px;
+}
+.action-button button {
 	width: 100%;
 	padding: 10px;
 	opacity: .9;
