--- a/www/css/style.css
+++ b/www/css/style.css
@@ -180,7 +180,14 @@
 
 .horizontal-divider {
     margin-top:8px;
-    width:85%;
+    width: 90%;
+    margin: 8px 5%;
+    display: block;
+    height: 0px;
+    border: 0;
+    border-top: 1px solid #cdccca;
+    border-bottom: 1px solid #edecea;
+    padding: 0;
 }
 
 .address-selector {
@@ -286,46 +293,42 @@
 /* EDIT ADDRESS MODAL */
 .edit-address-container {
     position:absolute;
-    width:100%;
     background-color:#ffffff;
     background: rgba(250, 250, 250, 0.85);
-    bottom:0%;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 0px 20px;
 }
-
-#add-address-title {
-    text-align:center;
-    margin-top:5%;
-    margin-bottom:5%;
+.edit-address-container input {
+    height: 48px;
+    line-height: 48px;
+    font-size: 24px;
+    border-radius: 4px;
+    margin-bottom: 20px;
+    padding:10px;
 }
 
 .user-text-input {
-    width:90%;
-    margin-left:5%;
-    margin-right:5%;
-    border-radius:5px;
-    margin-bottom:5%;
+    width: 100%;
+    border-radius: 4px;
 }
 
-
 .state-zip-container {
-    width:90%;
-    margin-left:5%;
-    margin-right:5%;
+    width: 100%;
     margin-bottom:20%;
     background-color:blue;
 }
 
 .edit-state {
     float:left;
-    width:45%;
-    border-radius:5px;
+    width:47%;
 }
 
 .edit-zipcode {
     float:left;
-    width:45%;
-    margin-left:10%;
-    border-radius:5px;
+    width:47%;
+    margin-left:6%;
 }
 
 .validation-msg {
