--- a/www/css/typography.css
+++ b/www/css/typography.css
@@ -47,7 +47,8 @@ html {
 .deadline-msg {
 	font-size:5vw;
 	line-height: 7vw;
-	width: 45%;
+	margin-left: 1vw;
+	width: 60%;
 	display:inline-block;
 	vertical-align:middle;
 	text-shadow: 0px 0px 10px #3d3c3a;
