--- a/www/css/style.css
+++ b/www/css/style.css
@@ -77,7 +77,7 @@
 
 .blur-fullscreen {
   -webkit-filter: blur(5px);
-  margin: -5px -10px -10px -5px;
+  /*margin: -5px -10px -10px -5px;*/
 }
 
 .slider-pager {
@@ -91,10 +91,19 @@
 }
 
 /* PRODUCTS PAGE */
-.price-container {
-    width:25%;
-    display:inline-block;
+.price-deadline-container {
+    position:absolute;
+    left:20px;
+    right: 20px;
+    color: #fff;
+    bottom: 100px;
     vertical-align:middle;
+    z-index: 2;
+}
+
+.price-container {
+    display: inline-block;
+    vertical-align: middle;
 }
 
 .arrow-btn {
@@ -124,55 +133,8 @@
     overflow: hidden;
     width: 100%;
 }
-
-.price-deadline-container {
-    position:absolute;
-    left:20px;
-    right: 20px;
-    color: #fff;
-    bottom: 100px;
-    vertical-align:middle;
-    z-index: 2;
-}
-
 .date-container {
     margin-left: 20px;
-}
-
-.date-time-selector {
-    height:50px;
-}
-
-.date-time-selector .active {
-    border-color: #ed5f5e;
-    z-index: 1;
-    color: #ed5f5e;
-}
-
-#address-btn-left {
-    float:left;
-}
-
-#address-btn-right {
-    float:right;
-}
-
-.address-selector .active {
-    border-color: #ed5f5e;
-    color: #ed5f5e;
-}
-
-#day-of-week {
-    font-size:12px;
-    margin-bottom:-5px;
-}
-
-#time-of-day {
-    font-size:12px;
-}
-
-#month-day {
-    font-size:8px;
 }
 
 .wide-as-needed {
@@ -181,35 +143,14 @@
 }
 
 .horizontal-divider {
-    margin-top:8px;
     width: 90%;
-    margin: 8px 5%;
+    margin: 16px 5% 8px;
     display: block;
     height: 0px;
     border: 0;
     border-top: 1px solid #cdccca;
     border-bottom: 1px solid #edecea;
     padding: 0;
-}
-
-.address-selector {
-    padding: 0px 20px 20px;
-}
-
-.address-btn{
-    width:48.3%;
-}
-
-.address-text {
-    font-size:8px;
-}
-
-.address-text-placeholder {
-    font-size:8px;
-}
-
-.address-type {
-    font-size:12px;
 }
 
 .scroll { 
